# cal

./: .gitignore  AGENTS.md  GO_API_IMPLEMENTATION.md  README.md  get_courses_info.py  getcal.py  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  vercel.json
.github/workflows/: ci.yml  data.yml  update-cal.yml
api/: data.py  gen.py  gencal.py  gens2.py  gens3.py  getcal.py  index_loader.py  utils.py
api/v2/: README.md  cal.go  go.mod  server.go  test.sh  test_go_api.go
data/: AND.ics  BIM.ics  DAC.ics  IMA.ics  M1_AND.ics  M1_ANDROIDE.ics  M1_BIM.ics  M1_DAC.ics  M1_IMA.ics  M1_SAR.ics  M1_SESI.ics  M1_SFPN.ics  M1_STL.ics  M2_AND.ics  M2_ANDROIDE.ics  M2_BIM.ics  M2_DAC.ics  M2_IMA.ics  M2_SAR.ics  M2_SESI.ics  M2_SFPN.ics  M2_STL.ics  SAR.ics  SESI.ics  SFPN.ics  STL.ics  etag-map.json
data/index/: M1_AND.json  M1_BIM.json  M1_DAC.json  M1_IMA.json  M1_SAR.json  M1_SESI.json  M1_SFPN.json  M1_STL.json  M2_AND.json  M2_BIM.json  M2_DAC.json  M2_IMA.json  M2_SAR.json  M2_SESI.json  M2_SFPN.json  M2_STL.json
data/preprocessed/: M1_ANDROIDE.json  M1_BIM.json  M1_DAC.json  M1_IMA.json  M1_SAR.json  M1_SESI.json  M1_SFPN.json  M1_STL.json  M2_ANDROIDE.json  M2_BIM.json  M2_DAC.json  M2_IMA.json  M2_SAR.json  M2_SESI.json  M2_SFPN.json  M2_STL.json
pages/: _app.tsx  _document.tsx  index.tsx
public/preprocessed/: index.json
public/wasm/: ics_wasm.wasm
rust/: Cargo.toml
rust/crates/fetcher/: Cargo.toml
rust/crates/fetcher/src/: main.rs
rust/crates/ics_wasm/: Cargo.toml
rust/crates/ics_wasm/src/: lib.rs
rust/crates/preprocess/: Cargo.toml
rust/crates/preprocess/src/: main.rs
scripts/: publish-data.sh
src/app/: globals.css  home-client.tsx  page.tsx
src/app/[locale]/: layout.tsx  page.tsx
src/dictionaries/: fr.json  zh.json
src/lib/: constants.ts  get-dictionary.ts  types.ts  wasm.ts
(+1 files in other folders)
