[workspace]
members = [
    "crates/fetcher",
    "crates/preprocess",
    "crates/ics_wasm",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["UFR Info Calendar Team"]
repository = "https://github.com/your/repo"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
chrono-tz = { version = "0.8", features = ["serde"] }
regex = "1"
ical = "0.10"
thiserror = "1"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
futures-util = "0.3"
tokio-stream = "0.1"
backoff = { version = "0.4", features = ["tokio"] }
base64 = "0.22"
percent-encoding = "2"
mime = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
blake3 = "1"
bytes = "1"
