[package]
name = "preprocess"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
regex = { workspace = true }
ical = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

